@@ -7,6 +7,7 @@
 * GD Single Tabs, widget now has option to output head and body separately - ADDED
 * Category default image not working when category imported via csv - FIXED
 * Jupiter theme GD page sidebars not working - FIXED
+* AJAX listings pagination not working is email allowed to show on listings - FIXED
 
 = 2.0.0.64 = 
 * Beaver Builder content does not work for archive item template - FIXED
